data/derived/fa15/progs/unify/prog0134.ml.out
Characters 14-18:
  let _ = assoc ([]);;
                ^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'b * 'c * ('c * 'b) list
